Fixed chun li not pulling data from web correctly. Refactored code for the hitbox data provider, checks internet access first, also checks for a preference in case network data is a concern (no way to set this yet though).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_character">CharacterActivity</string>
+    <string name="preference_attributes">settings</string>
+    <string name="title_wifi_only">Download only on WiFi</string>
+    <string name="summary_wifi_only">Download hit box data while only connected to a WiFi network.</string>
 
 </resources>
