--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="preference_attributes">settings</string>
     <string name="title_wifi_only">Download only on WiFi</string>
     <string name="summary_wifi_only">Download hit box data while only connected to a WiFi network.</string>
-
+    <string name="pref_data_setting">Data</string>
 </resources>
