Refactored code for move listing and details to be displayed by common activity so now all moves display frame images, added buttons to display various frames of a move, added a util class to control the menu items. possibly other things im forgetting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="title_wifi_only">Download only on WiFi</string>
     <string name="summary_wifi_only">Download hit box data while only connected to a WiFi network.</string>
     <string name="pref_data_setting">Data</string>
+    <string name="btn_first"><![CDATA[<<]]></string>
+    <string name="btn_prev"><![CDATA[<]]></string>
+    <string name="btn_play"><![CDATA[|>]]></string>
+    <string name="btn_next"><![CDATA[>]]></string>
+    <string name="btn_last"><![CDATA[>>]]></string>
 </resources>
